service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: wordpress
  name: wordpress-mysql
  labels:
    app: wordpress
spec:
  ports:
    - port: 3306
  selector:
    app: wordpress
    tier: mysql
  type: ClusterIP
