service-wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: wordpress
  name: wordpress
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
  selector:
    app: wordpress
    tier: wordpress-fe
  type: NodePort
