ingress-wordpress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: wordpress
spec:
  rules:
  - host: wordpress.localmahine
    http:
      paths:
        - backend:
            serviceName: wordpress
            servicePort: 80
